Added support for URL parameters
This means that localhost:8804/server?name=Name of the server&etc=etc
is now supported.

This addition will be useful when adding data endpoints for JSON data.